welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: unclosed character literal
var message=''
            ^BDRBuggle:45: error: unclosed character literal
  message=''
          ^BDRBuggle:1: error: illegal start of simple expression
var message=''
            ^BDRBuggle:45: error: illegal start of simple expression
  message=''
          ^