welcome.lessons.welcome.bdr.BDR.scala.code
var message=''
message=litMessage()
var fini=true
if (message!='A' or message!='B' or message!='C' or message!='Z' or message!='Y' or message!='X' or message!='R' or message!='L' or message!='I') {
  fini=false
}
while (fini) {
  if (message=='R') {
    droite()
    avance()
  }
  else if (message=='L') {
    gauche()
    avance()
  }
  else if (message=='I') {
    droite()
    droite()
    avance()
  }
  else if (message=='A') {
    avance()
  }
  else if (message=='B') {
    avance()
    avance()
  }
  else if (message=='C') {
    avance()
    avance()
    avance()
  }
  else if (message=='Z') {
    recule()
  }
  else if (message=='Y') {
    recule()
    recule()
  }
  else if (message=='X') {
    recule()
    recule()
    recule()
  }
  message=''
  message=lireMessage()
}